Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 <h2>
 <a id="kontak" class="anchor" href="#kontak" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontak</h2>
 
-<p>Drajat Hasan M &lt;<a href="mailto:drajatalvisis@gmail.com">drajatalvisis@gmail.com</a>&gt;
-Ade Malsasa Akbar &lt;<a href="mailto:teknoloid@gmail.com">teknoloid@gmail.com</a>&gt;</p>
+<ul>
+<li>Drajat Hasan M &lt;<a href="mailto:drajatalvisis@gmail.com">drajatalvisis@gmail.com</a>&gt;</li>
+<li>Ade Malsasa Akbar &lt;<a href="mailto:teknoloid@gmail.com">teknoloid@gmail.com</a>&gt;</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Inkscape-Kolaborasi-ID">Inkscape-Kolaborasi-ID</a></p>
