Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>
 <a id="unduh-buku" class="anchor" href="#unduh-buku" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Unduh Buku</h2>
 
-<p>Revisi 3 (belum final): </p>
+<p>Revisi 3 (belum final): Tes Percobaan Benar Atau Tidak</p>
 
 <h2>
 <a id="kontak" class="anchor" href="#kontak" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontak</h2>
