--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
 <p>Buku panduan masih dalam status Revisi 3. </p>
 
+<h2>Unduh Buku</h2>
+
+<p>Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)</p>
+
 <h2>
 <a id="kontak" class="anchor" href="#kontak" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontak</h2>
 
