--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		<meta name="description" content="Buku Kolaborasi Inkscape" />
 		<meta name="keywords" content="Buku Inkscape" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="javascripts/jquery.min.js"></script>
-		<script src="javascripts/jquery.dropotron.min.js"></script>
-		<script src="javascripts/skel.min.js"></script>
-		<script src="javascripts/skel-layers.min.js"></script>
-		<script src="javascripts/init.js"></script>
+		<script src="http://drajat-blogs.pe.hu/javascripts/jquery.min.js"></script>
+		<script src="http://drajat-blogs.pe.hu/javascripts/jquery.dropotron.min.js"></script>
+		<script src="http://drajat-blogs.pe.hu/javascripts/skel.min.js"></script>
+		<script src="http://drajat-blogs.pe.hu/javascripts/skel-layers.min.js"></script>
+		<script src="http://drajat-blogs.pe.hu/javascripts/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="stylesheets/skel.css" />
-			<link rel="stylesheet" href="stylesheets/style.css" />
+			<link rel="stylesheet" href="http://drajat-blogs.pe.hu/stylesheets/skel.css" />
+			<link rel="stylesheet" href="http://drajat-blogs.pe.hu/stylesheets/style.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
