--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Buku Inkscape Kolaborasi by Inkscape-Kolaborasi-ID</title>
+		<meta charset="utf-8">
+    		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Buku Kolaborasi Inkscape" />
 		<meta name="keywords" content="Buku Inkscape" />
