--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE HTML>
-<!--
-	Solarize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+<!doctype html>
 <html>
 	<head>
 		<title>Buku Inkscape Kolaborasi by Inkscape-Kolaborasi-ID</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Buku Kolaborasi Inkscape" />
 		<meta name="keywords" content="Buku Inkscape" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="http://drajat-blogs.pe.hu/javascripts/jquery.min.js"></script>
 		<script src="http://drajat-blogs.pe.hu/javascripts/jquery.dropotron.min.js"></script>
 		<script src="http://drajat-blogs.pe.hu/javascripts/skel.min.js"></script>
@@ -20,7 +14,7 @@
 			<link rel="stylesheet" href="http://drajat-blogs.pe.hu/stylesheets/skel.css" />
 			<link rel="stylesheet" href="http://drajat-blogs.pe.hu/stylesheets/style.css" />
 		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	
 	</head>
 	<body>
 
