--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Buku Inkscape Kolaborasi by Inkscape-Kolaborasi-ID</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" href="stylesheets/skel.css">
+    <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
