--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>Unduh Buku</h2>
 
 <p>Revisi 4 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%204.odt">ODT</a> (1.9 MB)</p>
-<p>Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)</p>
+Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)
 
 
 <h2>
