--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
 <h2>Unduh Buku</h2>
 <ul>
+<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
+<li>Revisi 5 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%205.odt">ODT</a> (1.9 MB)</li>
 <li>Revisi 4 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%204.odt">ODT</a> (1.9 MB)</li>
 <li>Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)</li>
 </ul>
