--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Buku Inkscape Kolaborasi by Inkscape-Kolaborasi-ID</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
+    <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
     <link rel="stylesheet" href="skel.css">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
