--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
     <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
-    <link rel="stylesheet" href="skel.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheets/skel.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
