--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
     <link rel="stylesheet" href="stylesheets/skel.css">
     <link rel="stylesheet" href="stylesheets/style.css">
-    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width"> -->
+    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
