--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
     <link rel="stylesheet" href="stylesheets/skel.css">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="javascripts/jquery.min.js"></script>
+    <script src="javascripts/jquery.dropotron.min.js"></script>
+    <script src="javascripts/skel.min.js"></script>
+    <script src="javascripts/skel-layers.min.js"></script>
+    <script src="javascripts/init.js"></script>
     <!-- <meta name="viewport" content="width=device-width"> -->
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport">
     <!--[if lt IE 9]>
