--- a/index.html
+++ b/index.html
@@ -62,55 +62,162 @@
 						</div>
 					</div>
 			</div>
-    <div class="wrapper">
-      <header>
-        <h1>Buku Inkscape Kolaborasi</h1>
-        <p>Situs web proyek buku Inkscape kolaborasi dari komunitas Inkscape Indonesia.</p>
+		
+		<!-- Main -->
+			<div id="main" class="wrapper style4">
+				<div class="container">
+					<div class="row">
 
-        <p class="view"><a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id">View the Project on GitHub <small>Inkscape-Kolaborasi-ID/inkscape-id</small></a></p>
+						<!-- Sidebar -->
+						<div id="sidebar" class="4u">
+							<section>
+								<header class="major">
+									<h2>Buku Inkscape Kolaborasi</h2>
+								</header>
+								<p>Situs web proyek buku Inkscape kolaborasi dari komunitas Inkscape Indonesia.</p>									
+								<p>
+									<a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id">
+										Lihat proyek kami di GitHub
+										<small>Inkscape-Kolaborasi-ID/inkscape-id</small>
+									</a>
+								</p>
+								<ul>
+									<li>
+										<a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id/zipball/master">
+											Download 
+											<strong>ZIP File</strong>
+										</a>
+									</li>
+									<li>
+										<a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id/tarball/master">
+											Download 
+											<strong>TAR Ball</strong>
+										</a>
+									</li>
+									<li>
+										<a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id">
+											View On 
+											<strong>GitHub</strong>
+										</a>
+									</li>
+								</ul>
 
+								<!-- <ul class="default">
+									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
+									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
+									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
+									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+									<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
+									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
+									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+								</ul>-->
+							</section>
+							<h2>Kontak Kami</h2>
+							<ul>
+								<li>Drajat Hasan H : <a href="mailto://drajatalvisis@gmail.com">drajatalvisis@gmail.com</a></li>
+								<li>Ade Malsasa Akbar : <a href="mailto://teknoloid@gmail.com">teknoloid@gmail.com</a></li>
+							</ul>
+							<!--<section>
+								<header class="major">
+									<h2>Mauris vulputate</h2>
+								</header>
+								<ul class="default">
+									<li><a href="#">Pellentesque lectus gravida blandit</a></li>
+									<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
+									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
+									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+									<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
+									<li><a href="#">Phasellus nibh pellentesque congue</a></li>
+									<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+								</ul>
+							</section>-->
+							<footer>
+								<h2>Proyek ini dirawat oleh</h2>
+								<p><a href="https://github.com/Inkscape-Kolaborasi-ID">Inkscape-Kolaborasi-ID</a></p>
+								<p>
+									<small>Host di Halaman GitHub — Tema oleh <a href="http://templated.co/solarize">TEMPLATED</a></small>
+								</p>
+							</footer>
+						</div>
 
-        <ul>
-          <li><a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="proyek-buku-kolaborasi-inkscape-indonesia" class="anchor" href="#proyek-buku-kolaborasi-inkscape-indonesia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Proyek Buku Kolaborasi Inkscape Indonesia</h3>
+						<!-- Content -->
+						<div id="content" class="8u skel-cell-important">
+							<section>
+								<header class="major">
+									<h3>Proyek Buku Kolaborasi Inkscape Indonesia</h3>
+									<small >Ditulis oleh : <a href="https://github.com/Malsasa">Ade Malsasa Akbar</a> dkk.</small>
+								</header>
+								<p>Situs web ini didirikan sebagai pusat unduhan dan pengerjaan massal Buku Panduan Inkscape Kolaborasi dari komunitas Inkscape Indonesia. Hasil Buku Sementara</p>
+								<img src="http://wstaw.org/m/2016/02/19/rootmagz-09-2016-2-pengerjaan.png" alt="Hasil Buku Sementara">
+								<br>
+								<h2>Status Proyek</h2>
+								<br>
+								<p>Buku panduan masih dalam status Revisi 3.</p>
+								<h2>Unduh Buku</h2>
+								<br>
+								<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
+								<li>Revisi 5 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%205.odt">ODT</a> (1.9 MB)</li>
+								<li>Revisi 4 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%204.odt">ODT</a> (1.9 MB)</li>
+								<li>Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)</li>
+							</section>
+						</div>
+					</div>
+				</div>
+			</div>
+		
+		<!-- Team -->
+			<!--- <div class="wrapper style5">
+				<section id="team" class="container">
+					<header class="major">
+						<h2>Kontak Kami</h2>
+						<span class="byline">Anda dapat menghubungi email pada setiap pengurus dibawah berikut :</span>
+					</header>
+					<div class="row">
+						<div class="3u">
+							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<h3>Drajat Hasan M</h3>
+							<p align="left">Dapat dihubungi pada : <a class="blue" href="mailto://drajatalvisis@gmail.com"> Drajat Hasan </a></p>
+						</div>
+						<div class="3u">
+							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<h3>Ade Malsasa Akbar</h3>
+							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+						</div>
+						<div class="3u">
+							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<h3>Belum Tersedia</h3>
+							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+						</div>
+						<div class="3u">
+							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<h3>Belum Tersedia</h3>
+							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+						</div>
+					</div> -->
+				</section>
+			</div>
 
-<p>Situs web ini didirikan sebagai pusat unduhan dan pengerjaan massal Buku Panduan Inkscape Kolaborasi dari komunitas Inkscape Indonesia. </p>
+	<!-- Footer -->
+		<div id="footer">
+			<section class="container">
+				<header class="major">
+					<h2>Terhubunglah bersama kami</h2>
+					<span class="byline">Kami memiliki akses media sosial yang mudah dan dapat dijangkau</span>
+				</header>
+				<ul class="icons">
+					<li class="active"><a href="https://www.facebook.com/groups/286080284852022/" class="fa fa-facebook"><span>Inkscape-iD@Facebook</span></a></li>
+					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
+					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
+				</ul>
+				<hr />
+			</section>
+			
+			<!-- Copyright -->
+				<div id="copyright">
+					Didesain oleh: <a href="http://templated.co">TEMPLATED</a> Gambar: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				</div>			
+		</div>
 
-<p><img src="http://wstaw.org/m/2016/02/19/rootmagz-09-2016-2-pengerjaan.png" alt="Hasil Buku Sementara"></p>
-
-<h2>
-<a id="status-proyek" class="anchor" href="#status-proyek" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Status Proyek</h2>
-
-<p>Buku panduan masih dalam status Revisi 6. </p>
-
-<h2>Unduh Buku</h2>
-<ul>
-<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
-<li>Revisi 5 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%205.odt">ODT</a> (1.9 MB)</li>
-<li>Revisi 4 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%204.odt">ODT</a> (1.9 MB)</li>
-<li>Revisi 3 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%203.odt">ODT</a> (1.5 MB)</li>
-</ul>
-
-<h2>
-<a id="kontak" class="anchor" href="#kontak" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontak</h2>
-
-<ul>
-<li>Drajat Hasan M &lt;<a href="mailto:drajatalvisis@gmail.com">drajatalvisis@gmail.com</a>&gt;</li>
-<li>Ade Malsasa Akbar &lt;<a href="mailto:teknoloid@gmail.com">teknoloid@gmail.com</a>&gt;</li>
-</ul>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Inkscape-Kolaborasi-ID">Inkscape-Kolaborasi-ID</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+	</body>
 </html>
