--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										</li> 
 										<li><a href="left-sidebar.html">Left Sidebar</a></li>
 										<li><a href="right-sidebar.html">Right Sidebar</a></li> -->
-										<li><a href="no-sidebar.html">Tentang Kami</a></li>
+										<li><a href="#">Tentang Kami</a></li>
 									</ul>
 								</nav>
 						</div>
