--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<br>
 								<h2>Status Proyek</h2>
 								<br>
-								<p>Buku panduan masih dalam status Revisi 6.</p>
+								<p>Buku masih dalam status revisi 6.</p>
 								<h2>Unduh Buku</h2>
 								<br>
 								<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
