--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
 								<h2>Status Proyek</h2>
 								<br>
 								<p>Buku masih dalam status revisi 6.</p>
+								<br>
+								<h2>Kontribusi</h2>
+								<p>Untuk berkontribusi dalam pembuatan buku ini anda dapat mengunduh buku pada link di bawah berikut dalam bentuk .odt . 
+								Lalu tulislah materi anda tentang Inkscape yang belum ada pada versi yang anda unduh dengan catatan materi yang ada berikan
+								tidak berbentuk tutorial . Lebih lengkapnya anda bisa membaca aturan pada buku .
+								</p>
 								<h2>Unduh Buku</h2>
 								<br>
 								<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
