Pengubahan perataan pada bagian & kontribusi

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									<h3>Proyek Buku Kolaborasi Inkscape Indonesia</h3>
 									<small >Ditulis oleh : <a href="https://github.com/Malsasa">Ade Malsasa Akbar</a> dkk.</small>
 								</header>
-								<p>Situs web ini didirikan sebagai pusat unduhan dan pengerjaan massal Buku Panduan Inkscape Kolaborasi dari komunitas Inkscape Indonesia. Hasil Buku Sementara</p>
+								<p align="justify">Situs web ini didirikan sebagai pusat unduhan dan pengerjaan massal Buku Panduan Inkscape Kolaborasi dari komunitas Inkscape Indonesia. Hasil Buku Sementara</p>
 								<img src="http://wstaw.org/m/2016/02/19/rootmagz-09-2016-2-pengerjaan.png" alt="Hasil Buku Sementara">
 								<br>
 								<h2>Status Proyek</h2>
@@ -155,7 +155,7 @@
 								<p>Buku masih dalam status revisi 6.</p>
 								<br>
 								<h2>Kontribusi</h2>
-								<p>Untuk berkontribusi dalam pembuatan buku ini anda dapat mengunduh buku pada link di bawah berikut dalam bentuk .odt . 
+								<p align="justify">Untuk berkontribusi dalam pembuatan buku ini anda dapat mengunduh buku pada link di bawah berikut dalam bentuk .odt . 
 								Lalu tulislah materi anda tentang Inkscape yang belum ada pada versi yang anda unduh dengan catatan materi yang ada berikan
 								tidak berbentuk tutorial . Lebih lengkapnya anda bisa membaca aturan pada buku .
 								</p>
