--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
 								<br>
 								<h2>Status Proyek</h2>
 								<p>Buku masih dalam status revisi 6.</p>
-								<br>
 								<h2>Kontribusi</h2>
 								<p align="justify">Untuk berkontribusi dalam pembuatan buku ini anda dapat mengunduh buku pada link di bawah berikut dalam bentuk .odt . 
 								Lalu tulislah materi anda tentang Inkscape yang belum ada pada versi yang anda unduh dengan catatan materi yang ada berikan
-								tidak berbentuk tutorial . Lebih lengkapnya anda bisa membaca aturan pada buku .
+								tidak berbentuk tutorial. Jika anda sudah menulis materi pada buku yang anda unduh dan anda ingin menguploadnya ke website ini
+								anda dapat menghubungi <a href="https://www.facebook.com/messages/ademalsasa">Ade Malsasa Akbar</a>. Lebih lengkapnya anda bisa membaca aturan pada buku .
+								
 								</p>
 								<h2>Unduh Buku</h2>
 								<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
