Hapus justify pada sidebar

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<header class="major">
 									<h2>Buku Inkscape Kolaborasi</h2>
 								</header>
-								<p align="justify">Situs web proyek buku Inkscape kolaborasi dari komunitas Inkscape Indonesia.</p>									
+								<p>Situs web proyek buku Inkscape kolaborasi dari komunitas Inkscape Indonesia.</p>									
 								<p>
 									<a href="https://github.com/Inkscape-Kolaborasi-ID/inkscape-id">
 										Lihat proyek kami di GitHub
