--- a/index.html
+++ b/index.html
@@ -210,18 +210,24 @@
 					<h2>Terhubunglah bersama kami</h2>
 					<span class="byline">Kami memiliki akses media sosial yang mudah dan dapat dijangkau</span>
 				</header>
-				<ul class="icons">
+				<!-- <ul class="icons">
 					<li class="active"><a href="https://www.facebook.com/groups/286080284852022/" class="fa fa-facebook"><span>Inkscape-iD@Facebook</span></a></li>
 					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
 					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
 					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-				</ul>
+				</ul> -->
 				<hr />
 			</section>
 			
 			<!-- Copyright -->
 				<div id="copyright">
 					Didesain oleh: <a href="http://templated.co">TEMPLATED</a> Gambar: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				<ul class="icons">
+					<li class="active"><a href="https://www.facebook.com/groups/286080284852022/" class="fa fa-facebook"><span>Inkscape-iD@Facebook</span></a></li>
+					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
+					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
+					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
+				</ul>
 				</div>			
 		</div>
 
