--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 			</div>
 
 	<!-- Footer -->
+	<!-- Bingung -->
 		<div id="footer">
 			<section class="container">
 				<header class="major">
