--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<img src="http://wstaw.org/m/2016/02/19/rootmagz-09-2016-2-pengerjaan.png" alt="Hasil Buku Sementara">
 								<br>
 								<h2>Status Proyek</h2>
-								<p>Buku masih dalam status revisi 6.</p>
+								<p>Buku masih dalam status revisi 8.</p>
 								<h2>Kontribusi</h2>
 								<p align="justify">Untuk berkontribusi dalam pembuatan buku ini anda dapat mengunduh buku pada link di bawah berikut dalam bentuk .odt . 
 								Lalu tulislah materi anda tentang Inkscape yang belum ada pada versi yang anda unduh dengan catatan materi yang ada berikan
@@ -161,6 +161,8 @@
 								
 								</p>
 								<h2>Unduh Buku</h2>
+								<li>Revisi 8 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%208.odt">ODT</a> (3.0 MB)</li>
+								<li>Revisi 7 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%207.odt">ODT</a> (3.0 MB)</li>
 								<li>Revisi 6 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%206.odt">ODT</a> (2.5 MB)</li>
 								<li>Revisi 5 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%205.odt">ODT</a> (1.9 MB)</li>
 								<li>Revisi 4 (belum final): <a href="http://103.31.227.30/~d00mzz/malsasa/Paper/svg/Buku%20Panduan%20Inkscape%20Pemula%20Rev%204.odt">ODT</a> (1.9 MB)</li>
