--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<title>Redirect</title>
 		<meta http-equiv="refresh" content="0; url=http://inkscape-kolaborasi-id.github.io/inkscape-id/" />	
 	</head>
 </html>
