--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
     <!-- <link rel="stylesheet" href="stylesheets/github-light.css"> -->
+    <meta http-equiv="refresh" content="0; url=http://inkscape-kolaborasi-id.github.io" />
     <link rel="stylesheet" href="stylesheets/skel.css">
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery.min.js"></script>
